--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,18 +17,24 @@
   "dependencies": {
     "@antv/data-set": "^0.11.4",
     "animate.css": "^4.1.0",
-    "ant-design-vue": "1.7.2",
+    "ant-design-vue": "^4.2.5",
     "axios": "^0.19.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^16.4.5",
+    "dotenv-expand": "^11.0.6",
     "enquire.js": "^2.1.6",
+    "function-bind": "^1.1.2",
     "highlight.js": "^10.2.1",
+    "isexe": "^3.1.1",
     "js-cookie": "^2.2.1",
+    "lodash.defaultsdeep": "^4.6.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "semver": "^7.6.3",
     "viser-vue": "^2.4.8",
-    "vue": "^2.6.11",
+    "vue": "^3.2.0",
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4",
     "vuedraggable": "^2.23.2",
